--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "displayName": "myCodebox Themes",
   "description": "All my fancy themes VS Code I made =)",
   "version": "0.0.1",
+  "author": "Spelunky",
+  "publisher": "Spelunky",
+  "icon": "icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mycodebox/mycodebox-themes"
+  },
+  "bugs": {
+    "url": "https://github.com/mycodebox/mycodebox-themes/issues"
+  },
+  "homepage": "https://github.com/mycodebox/mycodebox-themes/blob/master/README.md",
   "engines": {
     "vscode": "^1.73.0"
   },
+  "keywords": [
+    "dark",
+    "purple",
+    "paraíso",
+    "plum"
+  ],
   "categories": [
     "Themes"
   ],
