--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "author": "Spelunky",
   "publisher": "myCodebox",
-  "icon": "icon.png",
+  "icon": "src/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/mycodebox/mycodebox-themes"
