--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mycodebox-themes",
   "displayName": "myCodebox Themes",
-  "description": "All my fancy themes VS Code I made =)",
-  "version": "1.2.0",
+  "description": "All my fancy themes I made for VS Code =)",
+  "version": "1.0.0",
   "author": "Spelunky",
   "publisher": "myCodebox",
   "icon": "src/icon.png",
