--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mycodebox-themes",
   "displayName": "myCodebox Themes",
   "description": "All my fancy themes I made for VS Code =)",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "author": "Spelunky",
   "publisher": "myCodebox",
   "icon": "src/icon.png",
@@ -23,6 +23,7 @@
     "dark theme",
     "purple",
     "paraíso",
+    "paraiso",
     "plum",
     "codebox",
     "mycodebox",
